--- a/sui/Move.toml
+++ b/sui/Move.toml
@@ -1,7 +1,7 @@
 [package]
 name = "Aubrium"
 version = "1.0.0"
-authors = ["David Lucid <david@pentagon.xyz>"]
+authors = ["David Lucid <david@pentagon.xyz>", "Jet Jadeja <jet@pentagon.xyz>"]
 
 [dependencies]
 Sui = { local = "./lib/sui-framework" }
